# HW_WEB_7

./: config.ini  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 3c49fe1c5bdf_init.py
seed/: disciplines.py  grades.py  groups.py  students.py  teachers.py
src/: db.py  models.py
