[tool.poetry]
name = "homework-7"
version = "0.1.0"
description = ""
authors = ["Oleksii Latypov <oleksii.latypov.la@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_7"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.4"
faker = "^17.6.0"
psycopg2 = "^2.9.5"
alembic = "^1.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
